[package]
name = "data_bot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.0"
crossterm = "0.27.0"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tiktoken-rs = { version = "0.5.7", features = ["async-openai"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
whoami = "1.4.1"
